history logs functionlity
